[gd_scene load_steps=5 format=3 uid="uid://blv12b2g5qml1"]

[ext_resource type="Script" path="res://scenes/components/ui.gd" id="1_7e1qn"]
[ext_resource type="Theme" path="res://themes/theme.tres" id="1_g1ph3"]
[ext_resource type="Gradient" path="res://themes/texture_rect.tres" id="2_ih0f2"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5xeyt"]
gradient = ExtResource("2_ih0f2")
width = 160

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_7e1qn")

[node name="HelpContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -360.0
offset_top = -118.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("1_g1ph3")

[node name="TextureRect" type="TextureRect" parent="HelpContainer"]
custom_minimum_size = Vector2(360, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_5xeyt")

[node name="VBoxContainer" type="VBoxContainer" parent="HelpContainer"]
layout_mode = 2
offset_right = 350.0
offset_bottom = 118.0
alignment = 2

[node name="Label" type="Label" parent="HelpContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(240, 118)
layout_mode = 2
size_flags_horizontal = 8
text = "Mouse: Align Pick
Spacebar: Hold to Solve
S: Show Secret
1~5: Set Difficulty"
justification_flags = 131

[node name="ComboContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 100.0
offset_bottom = 50.0
mouse_filter = 2
theme = ExtResource("1_g1ph3")

[node name="TextureRect" type="TextureRect" parent="ComboContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_5xeyt")
expand_mode = 1
flip_h = true

[node name="ComboLabel" type="Label" parent="ComboContainer"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_right = 0.9
anchor_bottom = 0.865
offset_top = -3.0
offset_right = 10.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 64
text = "x0"
vertical_alignment = 1
justification_flags = 131
text_overrun_behavior = 1
visible_characters = 3
visible_ratio = 1.5
